general: hbs partials to flask_jsglue (#65)

--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -28,6 +28,7 @@
 
 	<script type="text/javascript" src="{{ url_for('static', filename='handlebars/handlebars.min.js') }}"></script>
 
+	{{ JSGlue.include() }}
 
 	<style>
 		/* menu image */
