--- a/sner/server/templates/scheduler/task/list.html
+++ b/sner/server/templates/scheduler/task/list.html
@@ -1,34 +1,28 @@
 {% extends "base.html" %}
 
+{% block script %}
+<script type="text/javascript">
+	var dt_task_list_table_options = {
+		'ajax': {'url': "{{ url_for('scheduler.task_list_json_route') }}", 'method': 'POST'},
+		'columns': [
+			dt_column('id'),
+			dt_column('name'),
+			dt_column('module'),
+			dt_column('params'),
+			dt_column_buttons(scheduler_pagepart_task_controls)
+		],
+		'order': [[ 0, 'asc' ]]
+	};
+	$(document).ready(function() {
+		var dt_task_list_table = $('#task_list_table').DataTable($.extend({}, dt_ajax_options, dt_task_list_table_options));
+	});
+</script>
+{% endblock %}
+
 {% block content %}
 <div class="tasks">
 	<h1>Tasks list <a class="btn btn-xs btn-default" href="{{ url_for('scheduler.task_add_route') }}"><span class="glyphicon glyphicon-plus"></span> Add</a></h1>
 
-	<table id="tasks_table" class="datatable_static table table-hover table-responsive">
-	<thead>
-		<tr>
-			<th>id</th>
-			<th>name</th>
-			<th>module</th>
-			<th>params</th>
-			<th></th>
-		</tr>
-	</thead>
-	<tbody>
-		{% for task in tasks %}
-		<tr>
-			<td>{{ task.id }}</td>
-			<td>{{ task.name }}</td>
-			<td>{{ task.module }}</td>
-			<td>{{ task.params }}</td>
-			<td>
-				<a class="btn btn-xs btn-default" href="{{ url_for('scheduler.queue_add_route', task_id=task.id) }}"><span class="glyphicon glyphicon-plus"></span> Queue</a>
-				<a class="btn btn-xs btn-default" href="{{ url_for('scheduler.task_edit_route', task_id=task.id) }}"><span class="glyphicon glyphicon-edit"></span> Edit</a>
-				{% with form=button_form, form_url=url_for('scheduler.task_delete_route', task_id=task.id) %}{% include 'button-delete.html' %}{% endwith %}
-			</td>
-		</tr>
-		{% endfor %}
-	</tbody>
-	</table>
+	<table id="task_list_table" class="table table-hover table-responsive table-condensed"></table>
 </div>
 {% endblock %}
