scheduler: split output files by directories of queue.id 	* save output files in directories by queue-id for somewhat simpler manipulation with files of completed queues 	* job.output/job.output_path attribute self-contained

--- a/sner/server/templates/scheduler/job/list.html
+++ b/sner/server/templates/scheduler/job/list.html
@@ -10,6 +10,7 @@
 			dt_column('queue_name', {'render': function(data, type, row, meta) {return scheduler_pagepart_queue_reference(row);}}),
 			dt_column('assignment'),
 			dt_column('retval'),
+			dt_column('output'),
 			dt_column('time_start'),
 			dt_column('time_end'),
 			dt_column_buttons(scheduler_pagepart_job_controls)
