server: ui tuning 	* scheduler: sort jobs by start_end and start_time in listings (#103) 	* no default sorting (use natural order), add sort options to dt           specific instances (#104) 	* datatables save state on client to preserve sorting and paging during reload (#104)

--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -180,9 +180,10 @@
 
 			'dom': '<"row"<"col-sm-6"l><"col-sm-6"f>> <"row"<"col-sm-12"p>> <"row"<"col-sm-12"rt>> <"row"<"col-sm-6"i><"col-sm-6"p>>',
 			'info': true,
-			'order': [[ 1, 'asc' ]],
 			'paging': true,
 			'pageLength': 10,
+			'stateSave': true,
+			'stateDuration': -1,
 
 			"drawCallback": function (settings) {
 				dt_toggle_pagination(this.api());
