--- a/sner/server/templates/storage/vuln/list.html
+++ b/sner/server/templates/storage/vuln/list.html
@@ -19,6 +19,7 @@
 			dt_column('comment'),
 			dt_column_buttons(storage_pagepart_vuln_controls)
 		],
+		'order': [[1, 'asc']],
 		'select': {'style': 'multi', 'selector': 'td:first-child'}
 	};
 	$(document).ready(function() {
