--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -229,7 +229,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-default">
-	<div class="container">
+	<div class="container-fluid">
         	<div class="navbar-header">
 			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
 				<span class="sr-only">Toggle navigation</span>
@@ -241,6 +241,7 @@
 		</div>
 		<div id="navbar" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
+				<li><a href="{{ url_for('scheduler.excl_list_route') }}">sch:Exclusions</a></li>
 				<li><a href="{{ url_for('scheduler.task_list_route') }}">sch:Tasks</a></li>
 				<li><a href="{{ url_for('scheduler.queue_list_route') }}">sch:Queues</a></li>
 				<li><a href="{{ url_for('scheduler.job_list_route') }}">sch:Jobs</a></li>
