--- a/sner/server/templates/scheduler/task/addedit.html
+++ b/sner/server/templates/scheduler/task/addedit.html
@@ -9,10 +9,7 @@
 		{{ form.csrf_token }}
 		{{ b_wtf.bootstrap_field(form.name, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.module, horizontal=True) }}
-		<div class="form-group">
-			{{ form.params.label(class="col-sm-2 control-label") }}
-			<div class="col-sm-10">{{ form.params(class="form-control", rows="10")|safe }}</div>
-		</div>
+		{{ b_wtf.bootstrap_field(form.params, horizontal=True) }}
 		<div class="form-group">
 			<label class="col-sm-2 control-label"></label>
 			<div class="col-sm-10"><button class="btn-default btn" type="submit">Save</button></div>
