--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -221,6 +221,7 @@
 	</script>
 
 
+	{% include 'auth/pageparts.html' %}
 	{% include 'scheduler/pageparts.html' %}
 	{% include 'storage/pageparts.html' %}
 
@@ -241,6 +242,8 @@
 		</div>
 		<div id="navbar" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
+			{% if current_user.is_authenticated %}
+				{% if current_user.has_role('operator') %}
 				<li><a href="{{ url_for('scheduler.excl_list_route') }}">sch:Exclusions</a></li>
 				<li><a href="{{ url_for('scheduler.task_list_route') }}">sch:Tasks</a></li>
 				<li><a href="{{ url_for('scheduler.queue_list_route') }}">sch:Queues</a></li>
@@ -252,6 +255,30 @@
 				<li><a href="{{ url_for('storage.note_list_route') }}">st:Notes</a></li>
 				<li><a href="{{ url_for('storage.host_vizdns_route') }}">st:Hosts:vizdns</a></li>
 				<li><a href="{{ url_for('storage.service_vizports_route') }}">st:Services:vizports</a></li>
+				{% endif %}
+			{% endif %}
+			</ul>
+
+			<ul class="nav navbar-nav navbar-right">
+			{% if not current_user.is_authenticated %}
+				<li><a href="{{ url_for('auth.login_route') }}">Login</a></li>
+			{% else %}
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+						<span class="glyphicon glyphicon-user"></span>
+						<strong>{{ current_user.username }}</strong>
+						<span class="glyphicon glyphicon-chevron-down"></span>
+					</a>
+					<ul class="dropdown-menu">
+					{% if current_user.has_role('admin') %}
+						<li><a href="{{ url_for('auth.user_list_route') }}">Users</a></li>
+						<li role="separator" class="divider"></li>
+					{% endif %}
+						<li><a href="{{ url_for('auth.user_changepassword_route') }}">Change password</a></li>
+						<li><a href="{{ url_for('auth.logout_route') }}">Logout</a></li>
+					</ul>
+				</li>
+			{% endif %}
 			</ul>
 		</div><!--/.nav-collapse -->
 	</div>
