--- a/sner/server/templates/auth/pageparts.html
+++ b/sner/server/templates/auth/pageparts.html
@@ -3,12 +3,20 @@
 	<a class="btn btn-xs btn-default" href="{{> auth.user_edit_route user_id=id}}"><span class="glyphicon glyphicon-edit"></span></a>
 	<a class="btn btn-xs btn-default abutton_delete_by_url" data-url="{{> auth.user_delete_route user_id=id}}"><span class="glyphicon glyphicon-trash text-alert"></span></a>
 </script>
+<script id="auth.pagepart-user_apikey_controls.hbs" type="text/x-handlebars-template">
+	{{apikey}} <a class="btn btn-xs btn-default abutton_userapikey_by_url" data-url="{{> auth.user_apikey_route user_id=user_id action=action}}">{{capitalize action}}</a>
+</script>
+
 {% endraw %}
 <script type="text/javascript">
 	/* hbs partials to pass flask endpoint uris to hbs templates */
 	Handlebars.registerPartial('auth.user_edit_route', Flask.url_for('auth.user_edit_route', {'user_id': '{%raw%}{{user_id}}{%endraw%}'}));
 	Handlebars.registerPartial('auth.user_delete_route', Flask.url_for('auth.user_delete_route', {'user_id': '{%raw%}{{user_id}}{%endraw%}'}));
+	Handlebars.registerPartial('auth.user_apikey_route', Flask.url_for('auth.user_apikey_route', {'user_id': '{%raw%}{{user_id}}{%endraw%}', 'action': '{%raw%}{{action}}{%endraw%}'}));
+
+	Handlebars.registerHelper('capitalize', function (data) { return data.charAt(0).toUpperCase() + data.slice(1).toLowerCase(); });
 
 	/* hbs templates */
 	var auth_pagepart_user_controls = Handlebars.compile(document.getElementById('auth.pagepart-user_controls.hbs').innerHTML);
+	var auth_pagepart_user_apikey_controls = Handlebars.compile(document.getElementById('auth.pagepart-user_apikey_controls.hbs').innerHTML);
 </script>
