--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -77,6 +77,15 @@
 		}
 
 		/*
+		 * show global/shared modal with title and body
+		 */
+		function sner_modal(title, body) {
+			$('#modal-global .modal-title').html(title);
+			$('#modal-global .modal-body').html(body);
+			$('#modal-global').modal();
+		}
+
+		/*
 		 * action select all from table
 		 */
 		function action_selectall(event) { event.data.dt.rows(null, {'page': 'current'}).select(); }
@@ -297,5 +306,17 @@
 		toastr['{{ category }}']('{{ message }}');
 		{% endfor %}
 	</script>
+
+	<div id="modal-global" class="modal fade" tabindex="-1" role="dialog">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title"></h4>
+				</div>
+				<div class="modal-body"></div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
