cosmetics: many cosmetics
	* general: document prerequisities (#101)
	* cosmetics: cleanup pageparts from excessive comments (#116)
	* cosmetics: use os.path.join for generating any filesystem path (#119)
	* server: tasks for nmap module cleanup
	* tests: sometimes coverage fails on sner/server/sessions.py (#123)
	* cosmetics: auth.user div naming

--- a/sner/server/templates/auth/user/addedit.html
+++ b/sner/server/templates/auth/user/addedit.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="auths">
+<div class="users">
 	<h1>User add/edit</h1>
 
 	<form class="form-horizontal" action="{{ form_url }}" method="post">
