--- a/sner/server/templates/auth/user/changepassword.html
+++ b/sner/server/templates/auth/user/changepassword.html
@@ -2,7 +2,7 @@
 {% import "bootstrap_wtf.html" as b_wtf %}
 
 {% block content %}
-<div class="auths">
+<div class="users">
 	<h1>User change password</h1>
 
 	<form class="form-horizontal" action="{{ form_url }}" method="post">
