--- a/sner/server/templates/auth/user/list.html
+++ b/sner/server/templates/auth/user/list.html
@@ -31,7 +31,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="auths">
+<div class="users">
 	<h1>Users list <a class="btn btn-xs btn-default" href="{{ url_for('auth.user_add_route') }}"><span class="glyphicon glyphicon-plus"></span> Add</a></h1>
 
 	<table id="user_list_table" class="table table-hover table-responsive table-condensed"></table>
