--- a/sner/server/templates/bootstrap_wtf.html
+++ b/sner/server/templates/bootstrap_wtf.html
@@ -35,7 +35,7 @@
         {%- endif %}
     {%- endif -%}
 
-    {% set field_output = field(class_=class_value, placeholder=placeholder_value) %}
+    {% set field_output = field(class_=class_value, placeholder=placeholder_value, id=False) %}
 
     {%- if horizontal %}
         {%- if field.errors -%}
