scheduler: job list show time_taken (time_end - time_start) (#127)

--- a/sner/server/templates/scheduler/job/list.html
+++ b/sner/server/templates/scheduler/job/list.html
@@ -13,6 +13,7 @@
 			dt_column('output'),
 			dt_column('time_start'),
 			dt_column('time_end'),
+			dt_column('time_taken'),
 			dt_column_buttons(scheduler_pagepart_job_controls)
 		],
 		'order': [[6, 'desc'], [7, 'desc']]
