server: forms refactoring
	* add SubmitField (#130)
	* remove form_url for self submitting form/views (#136)

--- a/sner/server/templates/auth/login.html
+++ b/sner/server/templates/auth/login.html
@@ -5,7 +5,7 @@
 <div class="auths">
 	<h1>Login</h1>
 
-	<form class="form-horizontal" action="{{ form_url }}" method="post">
+	<form class="form-horizontal" method="post">
 		{{ form.csrf_token }}
 		{{ b_wtf.bootstrap_field(form.username, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.password, horizontal=True) }}
