--- a/sner/server/templates/auth/user/addedit.html
+++ b/sner/server/templates/auth/user/addedit.html
@@ -12,17 +12,14 @@
 <div class="users">
 	<h1>User add/edit</h1>
 
-	<form class="form-horizontal" action="{{ form_url }}" method="post">
+	<form class="form-horizontal" method="post">
 		{{ form.csrf_token }}
 		{{ b_wtf.bootstrap_field(form.username, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.password, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.email, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.roles, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.active, horizontal=True) }}
-		<div class="form-group">
-			<label class="col-sm-2 control-label"></label>
-			<div class="col-sm-10"><button class="btn-default btn" type="submit">Save</button></div>
-		</div>
+		{{ b_wtf.bootstrap_field(form.submit, horizontal=True) }}
 	</form>
 </div>
 {% endblock %}
