--- a/sner/server/templates/button-generic.html
+++ b/sner/server/templates/button-generic.html
@@ -1,5 +1,5 @@
 {% import "bootstrap_wtf.html" as b_wtf %}
-<form class="form-horizontal" style="display: inline;" action="{{ form_url }}" method="post">
+<form class="form-horizontal" style="display: inline;"{% if form_url %} action="{{ form_url }}"{% endif %} method="post">
 	{{ b_wtf.bootstrap_form(form) }}
 	<button class="btn btn-xs btn-default" type="submit"> {{ button_caption }}</button>
 </form>
