--- a/sner/server/templates/scheduler/excl/addedit.html
+++ b/sner/server/templates/scheduler/excl/addedit.html
@@ -5,15 +5,12 @@
 <div class="excls">
 	<h1>Exclustion add/edit</h1>
 
-	<form class="form-horizontal" action="{{ form_url }}" method="post">
+	<form class="form-horizontal" method="post">
 		{{ form.csrf_token }}
 		{{ b_wtf.bootstrap_field(form.family, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.value, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.comment, horizontal=True) }}
-		<div class="form-group">
-			<label class="col-sm-2 control-label"></label>
-			<div class="col-sm-10"><button class="btn-default btn" type="submit">Save</button></div>
-		</div>
+		{{ b_wtf.bootstrap_field(form.submit, horizontal=True) }}
 	</form>
 </div>
 {% endblock %}
