--- a/sner/server/templates/scheduler/queue/addedit.html
+++ b/sner/server/templates/scheduler/queue/addedit.html
@@ -5,17 +5,14 @@
 <div class="queues">
 	<h1>Queue add/edit</h1>
 
-	<form class="form-horizontal" action="{{ form_url }}" method="post">
+	<form class="form-horizontal" method="post">
 		{{ form.csrf_token }}
 		{{ b_wtf.bootstrap_field(form.name, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.task, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.group_size, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.priority, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.active, horizontal=True) }}
-		<div class="form-group">
-			<label class="col-sm-2 control-label"></label>
-			<div class="col-sm-10"><button class="btn-default btn" type="submit">Save</button></div>
-		</div>
+		{{ b_wtf.bootstrap_field(form.submit, horizontal=True) }}
 	</form>
 </div>
 {% endblock %}
