--- a/sner/server/templates/scheduler/queue/enqueue.html
+++ b/sner/server/templates/scheduler/queue/enqueue.html
@@ -5,16 +5,10 @@
 <div class="queues">
 	<h1>Queue enqueue</h1>
 
-	<form class="form-horizontal" action="{{ form_url }}" method="post">
+	<form class="form-horizontal" method="post">
 		{{ form.csrf_token }}
-		<div class="form-group">
-			{{ form.targets.label(class="col-sm-2 control-label") }}
-			<div class="col-sm-10">{{ form.targets(class="form-control", rows="10")|safe }}</div>
-		</div>
-		<div class="form-group">
-			<label class="col-sm-2 control-label"></label>
-			<div class="col-sm-10"><button class="btn-default btn" type="submit">Save</button></div>
-		</div>
+		{{ b_wtf.bootstrap_field(form.targets, horizontal=True) }}
+		{{ b_wtf.bootstrap_field(form.submit, horizontal=True) }}
 	</form>
 </div>
 {% endblock %}
