--- a/sner/server/templates/storage/service/addedit.html
+++ b/sner/server/templates/storage/service/addedit.html
@@ -5,7 +5,7 @@
 <div class="services">
 	<h1>Service add/edit</h1>
 
-	<form class="form-horizontal" action="{{ form_url }}" method="post">
+	<form class="form-horizontal" method="post">
 		{{ form.csrf_token }}
 		<div class="form-group">
 			<label class="col-sm-2 control-label">Host</label>
@@ -18,10 +18,7 @@
 		{{ b_wtf.bootstrap_field(form.name, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.info, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.comment, horizontal=True) }}
-		<div class="form-group">
-			<label class="col-sm-2 control-label"></label>
-			<div class="col-sm-10"><button class="btn-default btn" type="submit">Save</button></div>
-		</div>
+		{{ b_wtf.bootstrap_field(form.submit, horizontal=True) }}
 	</form>
 </div>
 {% endblock %}
