server: cleanup form definitions
	* remove label= and validators= if explicitly not required
	* add required class for label tags on required form fileds (#144)

--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -34,7 +34,7 @@
 		.navbar-brand img { height: 100%; padding: 5px; width: auto; }
 
 		/* required items on forms */
-		label.control-label.required:after { content:"*"; color:red; }
+		div.form-group.required label.control-label:after { content:"*"; color:red; }
 
 		/* tag-editor same borders as other bootstraped input */
 		.tag-editor { border: 1px solid #ccc; border-radius: 4px; }
