--- a/sner/server/templates/scheduler/job/list.html
+++ b/sner/server/templates/scheduler/job/list.html
@@ -27,7 +27,13 @@
 
 {% block content %}
 <div class="jobs">
-	<h1>Jobs list</h1>
+	<h1>Jobs list{% if 'filter' in request.args %} <small><a class="btn btn-xs btn-info" href="{{ url_for('scheduler.job_list_route') }}">unfilter</a></small>{% endif %}</h1>
+
+	<div id="job_list_table_toolbar" class="dt_toolbar">
+		<div class="btn-group" role="group">
+			<a class="btn btn-xs btn-default" href="{{ url_for('scheduler.job_list_route', filter='Job.retval is_null ""') }}">Running</a>
+		</div>
+	</div>
 
 	<table id="job_list_table" class="table table-hover table-responsive table-condensed"></table>
 </div>
