--- a/sner/server/templates/storage/host/vizdns.html
+++ b/sner/server/templates/storage/host/vizdns.html
@@ -1,8 +1,16 @@
 {#- This file is part of sner4 project governed by MIT license, see the LICENSE.txt file. -#}
 {% extends "base.html" %}
 
+{% block script %}
+<script src="{{ url_for('static', filename='d3/d3.min.js') }}"></script>
+{% endblock %}
+
 {% block style %}
 <style type="text/css">
+.toolbar {
+	text-align: center;
+	margin-bottom: 0.5em;
+}
 svg {
 	border:1px solid lightgrey;
 }
@@ -16,10 +24,6 @@ svg {
 </style>
 {% endblock %}
 
-{% block script %}
-<script src="{{ url_for('static', filename='d3/d3.min.js') }}"></script>
-{% endblock %}
-
 {% block content %}
 <!--
 	http://bl.ocks.org/fancellu/2c782394602a93921faff74e594d1bb1
@@ -29,7 +33,15 @@ svg {
 	https://bl.ocks.org/mbostock/1129492
 -->
 <div class="hosts">
-	<div>crop: {% for level in range(0,3) %}<a class="btn btn-default" href="{{ url_for('storage.host_vizdns_route', crop=level) }}">{{level}}</a> {% endfor %}<div>
+	<div class="toolbar">
+		<div class="btn-group">
+			<a class="btn btn-xs btn-default disabled">crop:</a>
+			{% set active_crop = request.args.get('crop', 0)|int %}
+			{% for level in range(0,3) %}
+			<a class="btn btn-xs btn-default{% if active_crop == level %} active{% endif %}" href="{{ url_for('storage.host_vizdns_route', crop=level) }}">{{level}}</a>
+			{% endfor %}
+		</div>
+	</div>
 	<svg></svg>
 </div>
 
@@ -74,9 +86,8 @@ var dragDrop = d3.drag()
 		node.fy = null;
 	});
 
-d3.json("vizdns.json?crop={{crop}}", function (error, graph) {
-	if (error) throw error;
-	update(graph.nodes, graph.links);
+d3.json(Flask.url_for('storage.host_vizdns_json_route') + window.location.search, function(data) {
+	update(data.nodes, data.links);
 });
 
 function update(nodes, links) {
